# covid-notifier-lite

./: .gitignore  Dockerfile  README.md  dev.py  docker-compose.yml  pyproject.toml  start.sh  workflow.yml
.github/workflows/: main.yml
backend/: main.py  send_email.py  send_telegram.py
backend/app/: app.py  database.py
backend/app/crud/: covid.py  hello.py
backend/app/models/: covid.py
backend/app/routes/: covid.py  hello.py
covid_notifier_lite/: job.py  main.py  send_email.py
covid_notifier_lite/app/: app.py  database.py
covid_notifier_lite/app/crud/: covid.py  hello.py
covid_notifier_lite/app/models/: covid.py  hello.py
covid_notifier_lite/app/routes/: covid.py  hello.py
tests/: test_covid_notifier_lite.py  test_hello.py
