[tool.poetry]
name = "covid-notifier-lite"
version = "0.1.0"
description = ""
authors = ["Gustavo Faria <gustavoduartefaria@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
uvicorn = "^0.13.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
